--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "8.3.0",
     "moment": "2.22.2",
     "mongoose": "5.1.6",
-    "multer": "1.3.0 "
+    "multer": "1.3.0 ",
+    "redux-saga": "^1.1.3"
   }
 }
