--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "1.11.0",
     "concurrently": "3.6.0",
     "cookie-parser": "1.4.3",
+    "crypto-js": "3.1.9-1",
     "dotenv": "6.0.0",
     "express": "4.16.3",
     "express-formidable": "1.0.0",
@@ -23,6 +24,7 @@
     "moment": "2.22.2",
     "mongoose": "5.1.6",
     "multer": "1.3.0 ",
+    "nodemailer": "4.6.7",
     "redux-saga": "^1.1.3"
   }
 }
